objects/vlocity_cmt__OrderRelationship__c.object
<CustomObject>
    <description>Describes a relationship between two orders.</description>
    <fields>
        <fullName>vlocity_cmt__OrderId__c</fullName>
        <description>The order that is related to another order</description>
        <label>Order</label>
        <referenceTo>Order</referenceTo>
        <relationshipLabel>Order Relationships</relationshipLabel>
        <relationshipName>InitiatedOrderRelationships</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__RelatedOrderId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The order that fulfils the relationship</description>
        <label>Related Order</label>
        <referenceTo>Order</referenceTo>
        <relationshipLabel>Fulfilled Order Relationships</relationshipLabel>
        <relationshipName>FulfilledOrderRelationships</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__RelationshipType__c</fullName>
        <description>The type of relationship between the Order record that is referenced through the &apos;Order&apos; field and the related Order record that is referenced through the &apos;Related Order&apos; field.</description>
        <label>Relationship Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Follow On</fullName>
                </value>
                <value>
                    <fullName>Product_Order_Id</fullName>
                </value>
                <value>
                    <fullName>Customer_Order_Id</fullName>
                </value>
                <value>
                    <fullName>Work_Order_Id</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Order Relationship</label>
    <nameField>
        <label>Order Relationship Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Order Relationships</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>